gccida/c0/choose_hard_reg_mode
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1147:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode  choose_hard_reg_mode( unsigned int regno, unsigned int nregs) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1194:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+58h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1195:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+58h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1196:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modeb; // [rsp+58h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1197:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modec; // [rsp+58h] [rbp-18h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1198:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode found_mode; // [rsp+5Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1242:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1243:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v47 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1297:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[modea] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1298:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v43 = mode_class_0[modea] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1349:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[modeb] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1350:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v39 = mode_class_0[modeb] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1401:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[modec] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1402:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v35 = mode_class_0[modec] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1453:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[m] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1454:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v31 = mode_class_0[m] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/regclass.c:1460:56: error: use of undeclared identifier 'machine_mode'
if ( v30 == nregs && ix86_hard_regno_mode_ok( regno, ( machine_mode)m) ) 
                                                       ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/choose_hard_reg_mode/src/obj/regclass.o] Error 1
